--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Learning HTML</title>
+    <title>HTML Forms</title>
 </head>
 <body>
 
-    <div>
-      <p>hello, <strong>world</strong></p>
-      <p>my <small>first</small> web <em>page!</em></p>
-      <a href="https://www.thenetninja.co.uk">the net ninja website</a>
-      <a href="about.html">About Page</a>
-    </div>
+  <h1>HTML Forms</h1>
 
-    <div>
-      <h1>heading 1</h1>
-      <h2>heading 2</h2>
-      <h3>heading 3</h3>
-      <h4>heading 4</h4>
-    </div>
+  <form>
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" placeholder="username" required>
+    <br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <br><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="choose a password"
+     required>
 
-    <div>
-      <ul>
-        <li>yoshi</li>
-        <li>luigi</li>
-        <li>toad</li>
-      </ul>
-    </div>
+    <p>Select your age:</p>
 
-    <!-- span tag below -->
-    <!-- <span>I am a <br>span tag</span> -->
+    <input type="radio" name="age", value="0-25" id="Option-1">
+    <label for="Option-1">0-25</label>
+    <input type="radio" name="age", value="26-50" id="Option-2">
+    <label for="Option-2">26-50</label>
+    <input type="radio" name="age", value="51+" id="Option-3">
+    <label for="Option-3">51+</label>
 
-    <hr>
+    <br><br>
 
-    <img src="img/ninja.png" alt="a picture of a ninja">
+    <label for="question">Security Question:</label>
+    <select name="question" id="question">
+        <option value="q1">What color are your favourite pair of socks?</option>
+        <option value="q2">If you could be a vegetable, what it be?</option>
+        <option value="q3">What is your best ever security question?</option>
+    </select>
 
-    <blockquote cite="http://www.oscarwildesite.com"> we are all in the gutter, but some of us are looking at the stars</blockquote>
+    <br><br>
 
-    <p style="color: orange;">style me :)</p>
+    <label for="answer">Security question answer:</label>
+    <input type="text" id="answer" name="answer">
+
+    <br><br>
+
+    <label for="bio">Your bio:</label><br>
+    <textarea name="bio" id="bio" cols="30" rows="10" placeholder="about you..."></textarea>
+
+    <br><br>
+    <input type="submit" value="submit the form">
+
+  </form>
+
 </body>
 </html>
