--- a/index.html
+++ b/index.html
@@ -1,55 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HTML Forms</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>CSS Basics</title>
 </head>
 <body>
 
-  <h1>HTML Forms</h1>
+  <h1>CSS Basics</h1>
 
-  <form>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" placeholder="username" required>
-    <br><br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" placeholder="your email" required>
-    <br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" placeholder="choose a password"
-     required>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+     sed do eiusmod tempor incididunt ut labore et dolore magna
+     aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+     ullamco laboris nisi ut aliquip ex ea commodo consequat.
+     Duis aute irure dolor in reprehenderit in voluptate velit
+     esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+     occaecat cupidatat non proident, sunt in culpa qui officia
+     deserunt mollit anim id est laborum.</p>
 
-    <p>Select your age:</p>
+  <div>
+    <h2>Ninjas available for hire</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+       sed do eiusmod tempor incididunt ut labore et dolore magna
+       aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+       ullamco laboris nisi ut aliquip ex ea commodo consequat.
+       Duis aute irure dolor in reprehenderit in voluptate velit
+       esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+       occaecat cupidatat non proident, sunt in culpa qui officia
+       deserunt mollit anim id est laborum.</p>
+       <ul>
+          <li>Ninja Yoshi</li>
+          <li>Ninja Mario</li>
+          <li>Ninja Shaun</li>
+       </ul>
 
-    <input type="radio" name="age", value="0-25" id="Option-1">
-    <label for="Option-1">0-25</label>
-    <input type="radio" name="age", value="26-50" id="Option-2">
-    <label for="Option-2">26-50</label>
-    <input type="radio" name="age", value="51+" id="Option-3">
-    <label for="Option-3">51+</label>
-
-    <br><br>
-
-    <label for="question">Security Question:</label>
-    <select name="question" id="question">
-        <option value="q1">What color are your favourite pair of socks?</option>
-        <option value="q2">If you could be a vegetable, what it be?</option>
-        <option value="q3">What is your best ever security question?</option>
-    </select>
-
-    <br><br>
-
-    <label for="answer">Security question answer:</label>
-    <input type="text" id="answer" name="answer">
-
-    <br><br>
-
-    <label for="bio">Your bio:</label><br>
-    <textarea name="bio" id="bio" cols="30" rows="10" placeholder="about you..."></textarea>
-
-    <br><br>
-    <input type="submit" value="submit the form">
-
-  </form>
+  </div>
 
 </body>
 </html>
