--- a/index.html
+++ b/index.html
@@ -6,22 +6,51 @@
 </head>
 <body>
 
-    <h2>Inline elements</h2>
+   <div id="content">
 
-    <span>Span Tag</span>
-    <em>Em Tag</em>
-    <a href="">Anchor Tag</a>
-    <span>Span Tag</span>
+      <p class="error">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+         in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+         deserunt mollit anim id est laborum.</p>
 
-    <h2>Block-level elements</h2>
+      <p class="success">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+         tempor incididunt ut labore et dolore magna aliqua. Turpis in eu mi bibendum
+         neque egestas. Risus viverra adipiscing at in tellus integer feugiat scelerisque
+         varius. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue.
+         Tortor dignissim convallis aenean et tortor. Aliquam sem et tortor consequat id
+         porta nibh venenatis. Et sollicitudin ac orci phasellus egestas. Id aliquet lectus
+         proin nibh nisl condimentum id venenatis a. Amet consectetur adipiscing elit duis
+         tristique. Hendrerit gravida rutrum quisque non tellus orci ac auctor augue. Neque
+         vitae tempus quam pellentesque nec nam aliquam sem et. Malesuada proin libero nunc
+         consequat interdum. Ut eu sem integer vitae justo. Commodo sed egestas egestas fringilla.
+         Id consectetur purus ut faucibus pulvinar. Turpis egestas sed tempus urna et pharetra pharetra
+         massa. Pellentesque habitant morbi tristique senectus et netus.</p>
 
-    <div>div tag</div>
-    <div>another div tag</div>
-    <h3>h3 tag</h3>
-    <p>paragraph tag</p>
-    <ul>
-        <li>li tag</li>
-    </ul>
+
+      <p class="success feedback">Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Suspendisse
+         ultrices gravida dictum fusce ut placerat. Facilisi nullam vehicula ipsum a
+         arcu cursus. Massa id neque aliquam vestibulum morbi blandit. Aenean euismod
+         elementum nisi quis eleifend quam. Ac turpis egestas maecenas pharetra convallis.
+         Eget aliquet nibh praesent tristique magna sit amet purus. Ut porttitor leo a diam.
+         Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Nunc mi ipsum faucibus
+         vitae aliquet nec. Eget lorem dolor sed viverra ipsum. Est velit egestas dui id
+         ornare arcu odio. Proin nibh nisl condimentum id venenatis a condimentum vitae.
+         Bibendum ut tristique et egestas quis ipsum.</p>
+
+   </div>
+
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae quis aliquid
+      tenetur alias eaque voluptatem. Excepturi, corrupti sequi magnam ad dignissimos
+      minima voluptatum qui autem deserunt expedita aperiam ducimus! Sequi!</p>
+
+   <div class="error">I am an error</div>
+
+   <a href="https://www.thenetninjas.co.uk">the best site on the web</a>
+   <a href="https://www.google.com">Google Website</a>
+   <a href="https://www.thenetninjas.co.uk">the best site on the web</a>
 
 </body>
 </html>
