--- a/index.html
+++ b/index.html
@@ -2,55 +2,57 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>CSS Basics</title>
+    <title>Marioclub</title>
 </head>
 <body>
 
-   <div id="content">
+<header>
+    <h1>MarioClub</h1>
+</header>
 
-      <p class="error">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-         in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-         deserunt mollit anim id est laborum.</p>
+<section class="banner">
+    <img src="img/banner.png" alt="MarioClub Welcome Banner">
+    <div class="welcome">
+        <h2>Welcome to <br><span>MarioClub</span></h2>
+    </div>
+</section>
 
-      <p class="success">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. Turpis in eu mi bibendum
-         neque egestas. Risus viverra adipiscing at in tellus integer feugiat scelerisque
-         varius. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue.
-         Tortor dignissim convallis aenean et tortor. Aliquam sem et tortor consequat id
-         porta nibh venenatis. Et sollicitudin ac orci phasellus egestas. Id aliquet lectus
-         proin nibh nisl condimentum id venenatis a. Amet consectetur adipiscing elit duis
-         tristique. Hendrerit gravida rutrum quisque non tellus orci ac auctor augue. Neque
-         vitae tempus quam pellentesque nec nam aliquam sem et. Malesuada proin libero nunc
-         consequat interdum. Ut eu sem integer vitae justo. Commodo sed egestas egestas fringilla.
-         Id consectetur purus ut faucibus pulvinar. Turpis egestas sed tempus urna et pharetra pharetra
-         massa. Pellentesque habitant morbi tristique senectus et netus.</p>
+<nav class="main-nav">
+    <ul>
+        <li><a href="/join.html" class="join">Join the club</a></li>
+        <li><a href="/news.html">Latest News</a></li>
+        <li><a href="/games.html">New Games</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+    </ul>
+</nav>
 
-
-      <p class="success feedback">Quis risus sed vulputate odio ut enim blandit volutpat maecenas. Suspendisse
-         ultrices gravida dictum fusce ut placerat. Facilisi nullam vehicula ipsum a
-         arcu cursus. Massa id neque aliquam vestibulum morbi blandit. Aenean euismod
-         elementum nisi quis eleifend quam. Ac turpis egestas maecenas pharetra convallis.
-         Eget aliquet nibh praesent tristique magna sit amet purus. Ut porttitor leo a diam.
-         Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Nunc mi ipsum faucibus
-         vitae aliquet nec. Eget lorem dolor sed viverra ipsum. Est velit egestas dui id
-         ornare arcu odio. Proin nibh nisl condimentum id venenatis a condimentum vitae.
-         Bibendum ut tristique et egestas quis ipsum.</p>
-
-   </div>
-
-   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae quis aliquid
-      tenetur alias eaque voluptatem. Excepturi, corrupti sequi magnam ad dignissimos
-      minima voluptatum qui autem deserunt expedita aperiam ducimus! Sequi!</p>
-
-   <div class="error">I am an error</div>
-
-   <a href="https://www.thenetninjas.co.uk">the best site on the web</a>
-   <a href="https://www.google.com">Google Website</a>
-   <a href="https://www.thenetninjas.co.uk">the best site on the web</a>
+<main>
+    <article>
+        <h2>It's a me, Mario</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil quos
+           voluptatem necessitatibus architecto voluptatum, eos similique accusantium
+           neque. Quia optio, alias eveniet eligendi ipsum molestiae impedit iusto voluptas
+           ea assumenda! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut ut
+           adipisci quos hic officiis quibusdam placeat harum obcaecati ea beatae est fugit,
+           veniam voluptates. Debitis earum quam totam explicabo autem.</p>
+    </article>
+    <ul class="images">
+        <li><img src="img/thumb-1.png" alt="mario thumb 1"></li>
+        <li><img src="img/thumb-2.png" alt="mario thumb 2"></li>
+    </ul>
+</main>
+<section class="join">
+    <h2>Join Today!</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure quas
+       sint, aspernatur vitae iusto delectus sed earum magnam ut corrupti officiis
+       distinctio dignissimos quidem eaque, reiciendis quos id error rerum.</p>
+    <form>
+        <input type="email" name="email" placeholder="Type email and hit enter" required>
+    </form>
+</section>
+<footer>
+    <p class="copyright">Copyright 2023 Marioclub</p>
+</footer>
 
 </body>
 </html>
